--- a/themes/all-sets.html
+++ b/themes/all-sets.html
@@ -26,64 +26,83 @@
             <header class="header">All Sets</header>
 
             <main class="main-content">
-                <p>2026</p>
-                    <div class="grid-container2">
-                        <a href="../library/yellow-taxi.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Yellow Taxi</span><img src="../images/yellow-taxi.png" alt="Yellow Taxi"></div></a>
-                    </div>
 
                 <p>2025</p>
                     <div class="grid-container2">
-                        <a href="../library/the-going-merry-pirate-ship.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">The Going Merry Pirate Ship</span><img src="../images/the-going-merry-pirate-ship.png" alt="The Going Merry Pirate Ship"></div></a>
+                        <a href="../library/cute-bunny.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Cute Bunny</span><img src="../images/cute-bunny.png"></div></a>
+                        <a href="../library/flower-arrangement.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Flower Arrangement</span><img src="../images/flower-arrangement.jpg"></div></a>
+                        <a href="../library/monkey-d-luffy-figure.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Monkey D. Luffy Figure</span><img src="../images/monkey-d-luffy-figure.png"></div></a>
+                        <a href="../library/the-going-merry-pirate-ship.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">The Going Merry Pirate Ship</span><img src="../images/the-going-merry-pirate-ship.png"></div></a>
+                        <a href="../library/trevi-fountain.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Trevi Fountain</span><img src="../images/trevi-fountain.jpg"></div></a>
+                        <a href="../library/vincent-van-gogh-sunflowers.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Vincent Van Gogh Sunflowers</span><img src="../images/vincent-van-gogh-sunflowers.jpg"></div></a>
                     </div>
 
                 <p>2024</p>
                     <div class="grid-container2">
-                        <a href="../library/auspicious-dragon.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Auspicious Dragon</span><img src="../images/auspicious-dragon.png" alt="Auspicious Dragon"></div></a>
-                        <a href="../library/bouquet-of-roses.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Bouquet of Roses</span><img src="../images/bouquet-of-roses.jpg" alt="Bouquet of Roses"></div></a>
-                        <a href="../library/chrysanthemum.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Chrysanthemum</span><img src="../images/chrysanthemum.png" alt="Chrysanthemum"></div></a>
-                        <a href="../library/exotic-peacock.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Exotic Peacock</span><img src="../images/exotic-peacock.png" alt="Exotic Peacock"></div></a>
-                        <a href="../library/plum-blossom.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Plum Blossom</span><img src="../images/plum-blossom.png" alt="Plum Blossom"></div></a>
-                        <a href="../library/poinsettia.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Poinsettia</span><img src="../images/poinsettia.png" alt="Poinsettia"></div></a>
-                        <a href="../library/sea-animals.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Sea Animals</span><img src="../images/sea-animals.png" alt="Sea Animals"></div></a>
-                        <a href="../library/tiny-plants.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Tiny Plants</span><img src="../images/tiny-plants.jpg" alt="Tiny Plants"></div></a>
-                        <a href="../library/wreath.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Wreath</span><img src="../images/wreath.png" alt="Wreath"></div></a>
-                        <a href="../library/year-of-the-dragon.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Year of the Dragon</span><img src="../images/year-of-the-dragon.png" alt="Year of the Dragon"></div></a>
+                        <a href="../library/auspicious-dragon.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Auspicious Dragon</span><img src="../images/auspicious-dragon.png"></div></a>
+                        <a href="../library/love.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Love</span><img src="../images/love.jpg"></div></a>
+                        <a href="../library/lucky-bamboo.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Lucky Bamboo</span><img src="../images/lucky-bamboo.png"></div></a>
+                        <a href="../library/sea-animals.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Sea Animals</span><img src="../images/sea-animals.png"></div></a>
+                        <a href="../library/year-of-the-dragon.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Year of the Dragon</span><img src="../images/year-of-the-dragon.png"></div></a>
                     </div>
 
                 <p>2023</p>
                     <div class="grid-container2">
-                        <a href="../library/concorde.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Concorde</span><img src="../images/concorde.jpg" alt="Concorde"></div></a>
-                        <a href="../library/daffodils.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Daffodils</span><img src="../images/daffodils.jpg" alt="Daffodils"></div></a>
-                        <a href="../library/lotus-flowers.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Lotus Flowers</span><img src="../images/lotus-flowers.png" alt="Lotus Flowers"></div></a>
-                        <a href="../library/tales-of-the-space-age.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Tales of the Space Age</span><img src="../images/tales-of-the-space-age.png" alt="Tales of the Space Age"></div></a>
-                        <a href="../library/the-insect-collection.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">The Insect Collection</span><img src="../images/the-insect-collection.png" alt="The Insect Collection"></div></a>
-                        <a href="../library/tranquil-garden.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Tranquil Garden</span><img src="../images/tranquil-garden.png" alt="Tranquil Garden"></div></a>
+                        <a href="../library/cherry-blossoms.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Cherry Blossoms</span><img src="../images/cherry-blossoms.jpg"></div></a>
+                        <a href="../library/concorde.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Concorde</span><img src="../images/concorde.jpg"></div></a>
+                        <a href="../library/tales-of-the-space-age.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Tales of the Space Age</span><img src="../images/tales-of-the-space-age.png"></div></a>
+                        <a href="../library/tranquil-garden.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Tranquil Garden</span><img src="../images/tranquil-garden.png"></div></a>
                     </div>
 
                 <p>2022</p>
                     <div class="grid-container2">
-                        <a href="../library/orchid.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Orchid</span><img src="../images/orchid.jpg" alt="Orchid"></div></a>
-                        <a href="../library/succulents.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Succulents</span><img src="../images/succulents.jpg" alt="Succulents"></div></a>
-                        <a href="../library/vespa.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Vespa 125</span><img src="../images/vespa.png" alt="Vespa 125"></div></a>
-                        <a href="../library/vincent-van-gogh-the-starry-night.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Vincent van Gogh - The Starry Night</span><img src="../images/vincent-van-gogh-the-starry-night.png" alt="Vincent van Gogh - The Starry Night"></div></a>
+                        <a href="../library/daffodils.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Daffodils</span><img src="../images/daffodils.jpg"></div></a>
+                        <a href="../library/great-pyramid-of-giza.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Great Pyramid Of Giza</span><img src="../images/great-pyramid-of-giza.jpg"></div></a>
+                        <a href="../library/hokusai-the-great-wave.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Hokusai The Great Wave</span><img src="../images/hokusai-the-great-wave.jpg"></div></a>
+                        <a href="../library/orchid.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Orchid</span><img src="../images/orchid.jpg"></div></a>
+                        <a href="../library/vincent-van-gogh-the-starry-night.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Vincent van Gogh - The Starry Night</span><img src="../images/vincent-van-gogh-the-starry-night.png"></div></a>
                     </div>
 
                 <p>2021</p>
                     <div class="grid-container2">
-                        <a href="../library/bonsai-tree.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Bonsai Tree</span><img src="../images/bonsai-tree.jpg" alt="Bonsai Tree"></div></a>
-                        <a href="../library/flower-bouquet.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Flower Bouquet</span><img src="../images/flower-bouquet.jpg" alt="Flower Bouquet"></div></a>
-                        <a href="../library/titanic.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Titanic</span><img src="../images/titanic2.jpg" alt="Titanic"></div></a>
+                        <a href="../library/bonsai-tree.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Bonsai Tree</span><img src="../images/bonsai-tree.jpg"></div></a>
+                        <a href="../library/singapore.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Singapore</span><img src="../images/singapore.jpg"></div></a>
+                        <a href="../library/sunflowers.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Sunflowers</span><img src="../images/sunflowers.jpg"></div></a>
+                        <a href="../library/titanic.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Titanic</span><img src="../images/titanic2.jpg"></div></a>
+                        <a href="../library/yellow-taxi.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Yellow Taxi</span><img src="../images/yellow-taxi.png"></div></a>
                     </div>
 
                 <p>2020</p>
                     <div class="grid-container2">
-                        <a href="../library/colosseum.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Colosseum</span><img src="../images/colosseum.jpg" alt="Colosseum"></div></a>
-                        <a href="../library/nutcracker.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Nutcracker</span><img src="../images/nutcracker.png" alt="Nutcracker"></div></a>
+                        <a href="../library/andy-warhol's-marilyn-monroe.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Andy Warhol's Marilyn Monroe</span><img src="../images/andy-warhol's-marilyn-monroe.jpg"></div></a>
+                        <a href="../library/colosseum.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Colosseum</span><img src="../images/colosseum.jpg"></div></a>
+                        <a href="../library/roses.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Roses</span><img src="../images/roses.jpg"></div></a>
+                        <a href="../library/the-white-house.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">The White House</span><img src="../images/the-white-house.jpg"></div></a>
+                    </div>
+
+                <p>2019</p>
+                    <div class="grid-container2">
+                        <a href="../library/tokyo.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Tokyo</span><img src="../images/tokyo.jpg"></div></a>
+                    </div>
+
+                <p>2018</p>
+                    <div class="grid-container2">
+                        <a href="../library/san-francisco.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">San Francisco</span><img src="../images/san-francisco.jpg"></div></a>
                     </div>
 
                 <p>2017</p>
                     <div class="grid-container2">
-                        <a href="../library/nutcracker.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Nutcracker</span><img src="../images/nutcracker.png" alt="Nutcracker"></div></a>
+                        <a href="../library/nutcracker.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Nutcracker</span><img src="../images/nutcracker.png"></div></a>
+                    </div>
+
+                <p>2016</p>
+                    <div class="grid-container2">
+                        <a href="../library/london.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">London</span><img src="../images/london.png"></div></a>
+                    </div>
+
+                <p>2015</p>
+                    <div class="grid-container2">
+                        <a href="../library/new-york-city.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">New York City</span><img src="../images/new-york-city.jpg"></div></a>
                     </div>
 
             </main>
