--- a/themes/creator-3in1.html
+++ b/themes/creator-3in1.html
@@ -26,14 +26,14 @@
             <header class="header">Creator 3-in-1</header>
 
             <main class="main-content">
+                 <p>2025</p>
+                    <div class="grid-container2">
+                        <a href="../library/cute-bunny.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Cute Bunny</span><img src="../images/cute-bunny.png" alt="Cute Bunny"></div></a>
+                    </div>
                 <p>2024</p>
                     <div class="grid-container2">
                         <a href="../library/sea-animals.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Sea Animals</span><img src="../images/sea-animals.png" alt="Sea Animals"></div></a>
                         <a href="../library/exotic-peacock.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Exotic Peacock</span><img src="../images/exotic-peacock.png" alt="Exotic Peacock"></div></a>
-                    </div>
-
-                <p>Earlier years</p>
-                    <div class="grid-container2">
                     </div>
             </main>
 
