--- a/themes/brickheadz.html
+++ b/themes/brickheadz.html
@@ -27,9 +27,10 @@
 
             <main class="main-content">
 
-                <p>2020</p>
+                <p>2025</p>
                     <div class="grid-container2">
-                        <a href="../library/nutcracker.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Nutcracker</span><img src="../images/nutcracker.png" alt="Nutcracker"></div></a>
+                        <a href="../library/monkey-d-luffy-figure.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Monkey D. Luffy Figure</span><img src="../images/monkey-d-luffy-figure.png" alt="Monkey D. Luffy Figure"></div></a>
+                        <a href="../library/buggy-the-clown-figure.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Buggy the Clown Figure</span><img src="../images/buggy-the-clown-figure.png" alt="Buggy the Clown Figure"></div></a>
                     </div>
             </main>
 
