--- a/themes/icons.html
+++ b/themes/icons.html
@@ -27,33 +27,15 @@
 
             <main class="main-content">
 
-                <p>2024</p>
-                    <div class="grid-container2">
-                        <a href="../library/bouquet-of-roses.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Bouquet of Roses</span><img src="../images/bouquet-of-roses.jpg" alt="Bouquet of Roses"></div></a>
-                        <a href="../library/tiny-plants.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Tiny Plants</span><img src="../images/tiny-plants.jpg" alt="Tiny Plants"></div></a>
-                        <a href="../library/wreath.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Wreath</span><img src="../images/wreath.png" alt="Wreath"></div></a>
-                        <a href="../library/chrysanthemum.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Chrysanthemum</span><img src="../images/chrysanthemum.png" alt="Chrysanthemum"></div></a>
-                        <a href="../library/plum-blossom.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Plum Blossom</span><img src="../images/plum-blossom.png" alt="Plum Blossom"></div></a>
-                        <a href="../library/poinsettia.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Poinsettia</span><img src="../images/poinsettia.png" alt="Poinsettia"></div></a>
-                    </div>
-
                 <p>2023</p>
                     <div class="grid-container2">
                         <a href="../library/tranquil-garden.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Tranquil Garden</span><img src="../images/tranquil-garden.png" alt="Tranquil Garden"></div></a>
                         <a href="../library/concorde.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Concorde</span><img src="../images/concorde.jpg" alt="Concorde"></div></a>
-                    </div>
-
-                <p>2022</p>
-                    <div class="grid-container2">
-                        <a href="../library/vespa.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Vespa 125</span><img src="../images/vespa.png" alt="Vespa 125"></div></a>
-                        <a href="../library/succulents.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Succulents</span><img src="../images/succulents.jpg" alt="Succulents"></div></a>
-                        <a href="../library/orchid.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Orchid</span><img src="../images/orchid.jpg" alt="Orchid"></div></a>
+                        <a href="../library/moving-truck.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Moving Truck</span><img src="../images/moving-truck.png" alt="Moving Truck"></div></a>
                     </div>
 
                 <p>2021</p>
                     <div class="grid-container2">
-                        <a href="../library/flower-bouquet.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Flower Bouquet</span><img src="../images/flower-bouquet.jpg" alt="Flower Bouquet"></div></a>
-                        <a href="../library/bonsai-tree.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Bonsai Tree</span><img src="../images/bonsai-tree.jpg" alt="Bonsai Tree"></div></a>
                         <a href="../library/titanic.html" class="hidden-box-link"><div class="theme-box2"><span class="theme-box2-label">Titanic</span><img src="../images/titanic2.jpg" alt="Titanic"></div></a>
                     </div>
 
