--- a/index.html
+++ b/index.html
@@ -23,11 +23,75 @@
         </div>
         <div class="main-box">
             <div class="home-container">
-                <div class="home-box">Fun Facts</div>
-                <div class="home-box">My Top 3s</div>
-                <div class="home-box">New Releases and Upcoming Retirements</div>
+                <div class="home-slideshow">
+                    <a href="library/titanic.html" class="home-slideshow-link"><img src="images/titanic2.jpg" alt="Titanic"></a>
+                    <a href="library/colosseum.html" class="home-slideshow-link"><img src="images/colosseum.png" alt="Colosseum"></a>
+                    <a href="library/concorde.html" class="home-slideshow-link"><img src="images/concorde.jpg" alt="Concorde"></a>
+                    <a href="library/statue-of-liberty.html" class="home-slideshow-link"><img src="images/statue-of-liberty.png" alt="Statue of Liberty"></a>
+                    <a href="library/taj-mahal.html" class="home-slideshow-link"><img src="images/taj-mahal.png" alt="Taj Mahal"></a>
+                    <a href="library/the-white-house.html" class="home-slideshow-link"><img src="images/the-white-house.png" alt="The White House"></a>
+                    <a href="library/great-pyramid-of-giza.html" class="home-slideshow-link"><img src="images/great-pyramid-of-giza.png" alt="Great Pyramid of Giza"></a>
+                    <a href="library/empire-state-building.html" class="home-slideshow-link"><img src="images/empire-state-building.png" alt="Empire State Building"></a>
+                    <a href="library/trevi-fountain.html" class="home-slideshow-link"><img src="images/trevi-fountain.png" alt="Trevi Fountain"></a>
+                    <a href="library/singapore.html" class="home-slideshow-link"><img src="images/singapore.png" alt="Singapore"></a>
+                    <a href="library/las-vegas.html" class="home-slideshow-link"><img src="images/las-vegas.png" alt="Las Vegas"></a>
+                    <a href="library/new-york-city.html" class="home-slideshow-link"><img src="images/new-york-city.png" alt="New York City"></a>
+                    <a href="library/san-francisco.html" class="home-slideshow-link"><img src="images/san-francisco.png" alt="San Francisco"></a>
+                    <a href="library/tokyo.html" class="home-slideshow-link"><img src="images/tokyo.png" alt="Tokyo"></a>
+                    <a href="library/london.html" class="home-slideshow-link"><img src="images/london.png" alt="London"></a>
+                    <a href="library/vespa.html" class="home-slideshow-link"><img src="images/vespa.png" alt="Vespa"></a>
+                    <a href="library/yellow-taxi.html" class="home-slideshow-link"><img src="images/yellow-taxi.png" alt="Yellow Taxi"></a>
+                    <a href="library/ponte-vecchio.html" class="home-slideshow-link"><img src="images/ponte-vecchio.jpg" alt="Ponte Vecchio"></a>
+                    <a href="library/tranquil-garden.html" class="home-slideshow-link"><img src="images/tranquil-garden.png" alt="Tranquil Garden"></a>
+                    <a href="library/daffodils.html" class="home-slideshow-link"><img src="images/daffodils.png" alt="Daffodils"></a>
+                    <a href="library/lotus-flowers.html" class="home-slideshow-link"><img src="images/lotus-flowers.png" alt="Lotus Flowers"></a>
+                    <a href="library/sunflowers.html" class="home-slideshow-link"><img src="images/sunflowers.png" alt="Sunflowers"></a>
+                    <a href="library/cherry-blossoms.html" class="home-slideshow-link"><img src="images/cherry-blossoms.png" alt="Cherry Blossoms"></a>
+                    <a href="library/roses.html" class="home-slideshow-link"><img src="images/roses.png" alt="Roses"></a>
+                    <a href="library/bouquet-of-roses.html" class="home-slideshow-link"><img src="images/bouquet-of-roses.png" alt="Bouquet of Roses"></a>
+                    <a href="library/flower-bouquet.html" class="home-slideshow-link"><img src="images/flower-bouquet.png" alt="Flower Bouquet"></a>
+                    <a href="library/pretty-pink-flower-bouquet.html" class="home-slideshow-link"><img src="images/pretty-pink-flower-bouquet.png" alt="Pretty Pink Flower Bouquet"></a>
+                    <a href="library/flower-arrangement.html" class="home-slideshow-link"><img src="images/flower-arrangement.png" alt="Flower Arrangement"></a>
+                    <a href="library/orchid.html" class="home-slideshow-link"><img src="images/orchid.png" alt="Orchid"></a>
+                    <a href="library/mini-orchid.html" class="home-slideshow-link"><img src="images/mini-orchid.png" alt="Mini Orchid"></a>
+                    <a href="library/plum-blossom.html" class="home-slideshow-link"><img src="images/plum-blossom.png" alt="Plum Blossom"></a>
+                    <a href="library/lucky-bamboo.html" class="home-slideshow-link"><img src="images/lucky-bamboo.png" alt="Lucky Bamboo"></a>
+                    <a href="library/chrysanthemum.html" class="home-slideshow-link"><img src="images/chrysanthemum.png" alt="Chrysanthemum"></a>
+                    <a href="library/succulents.html" class="home-slideshow-link"><img src="images/succulents.png" alt="Succulents"></a>
+                    <a href="library/tiny-plants.html" class="home-slideshow-link"><img src="images/tiny-plants.png" alt="Tiny Plants"></a>
+                    <a href="library/bonsai-tree.html" class="home-slideshow-link"><img src="images/bonsai-tree.png" alt="Bonsai Tree"></a>
+                    <a href="library/poinsettia.html" class="home-slideshow-link"><img src="images/poinsettia.png" alt="Poinsettia"></a>
+                    <a href="library/wreath.html" class="home-slideshow-link"><img src="images/wreath.png" alt="Wreath"></a>
+                    <a href="library/christmas-tree.html" class="home-slideshow-link"><img src="images/christmas-tree.png" alt="Christmas Tree"></a>
+                    <a href="library/family-christmas-tree-decoration.html" class="home-slideshow-link"><img src="images/family-christmas-tree-decoration.png" alt="Family Christmas Tree Decoration"></a>
+                    <a href="library/northern-lights-diorama.html" class="home-slideshow-link"><img src="images/northern-lights-diorama.png" alt="Northern Lights Diorama"></a>
+                    <a href="library/nutcracker.html" class="home-slideshow-link"><img src="images/nutcracker.png" alt="Nutcracker"></a>
+                    <a href="library/christmas-decor-set.html" class="home-slideshow-link"><img src="images/christmas-decor-set.png" alt="Christmas Decor Set"></a>
+                    <a href="library/santa's-workshop.html" class="home-slideshow-link"><img src="images/santa's-workshop.png" alt="Santa's Workshop"></a>
+                    <a href="library/winter-holiday-train.html" class="home-slideshow-link"><img src="images/winter-holiday-train.jpg" alt="Winter Holiday Train"></a>
+                    <a href="library/moving-truck.html" class="home-slideshow-link"><img src="images/moving-truck.png" alt="Moving Truck"></a>
+                    <a href="library/decorative-easter-egg.html" class="home-slideshow-link"><img src="images/decorative-easter-egg.png" alt="Decorative Easter Egg"></a>
+                    <a href="library/easter-bunny-and-chick-egg-hunt.html" class="home-slideshow-link"><img src="images/easter-bunny-and-chick-egg-hunt.jpg" alt="Easter Bunny and Chick Egg Hunt"></a>
+                    <a href="library/cute-bunny.html" class="home-slideshow-link"><img src="images/cute-bunny.png" alt="Cute Bunny"></a>
+                    <a href="library/exotic-peacock.html" class="home-slideshow-link"><img src="images/exotic-peacock.png" alt="Exotic Peacock"></a>
+                    <a href="library/sea-animals.html" class="home-slideshow-link"><img src="images/sea-animals.png" alt="Sea Animals"></a>
+                    <a href="library/the-insect-collection.html" class="home-slideshow-link"><img src="images/the-insect-collection.png" alt="The Insect Collection"></a>
+                    <a href="library/auspicious-dragon.html" class="home-slideshow-link"><img src="images/auspicious-dragon.png" alt="Auspicious Dragon"></a>
+                    <a href="library/year-of-the-dragon.html" class="home-slideshow-link"><img src="images/year-of-the-dragon.png" alt="Year of the Dragon"></a>
+                    <a href="library/tales-of-the-space-age.html" class="home-slideshow-link"><img src="images/tales-of-the-space-age.png" alt="Tales of the Space Age"></a>
+                    <a href="library/vincent-van-gogh-the-starry-night.html" class="home-slideshow-link"><img src="images/vincent-van-gogh-the-starry-night.png" alt="Vincent Van Gogh - The Starry Night"></a>
+                    <a href="library/vincent-van-gogh-sunflowers.html" class="home-slideshow-link"><img src="images/vincent-van-gogh-sunflowers.png" alt="Vincent Van Gogh - Sunflowers"></a>
+                    <a href="library/hokusai-the-great-wave.html" class="home-slideshow-link"><img src="images/hokusai-the-great-wave.png" alt="Hokusai - The Great Wave"></a>
+                    <a href="library/mona-lisa.html" class="home-slideshow-link"><img src="images/mona-lisa.png" alt="Mona Lisa"></a>
+                    <a href="library/andy-warhol's-marilyn-monroe.html" class="home-slideshow-link"><img src="images/andy-warhol's-marilyn-monroe.png" alt="Andy Warhol's Marilyn Monroe"></a>
+                    <a href="library/love.html" class="home-slideshow-link"><img src="images/love.png" alt="LOVE"></a>
+                    <a href="library/retro-record-player.html" class="home-slideshow-link"><img src="images/retro-record-player.png" alt="Retro Record Player"></a>
+                    <a href="library/monkey-d-luffy-figure.html" class="home-slideshow-link"><img src="images/monkey-d-luffy-figure.png" alt="Monkey D. Luffy Figure"></a>
+                    <a href="library/buggy-the-clown-figure.html" class="home-slideshow-link"><img src="images/buggy-the-clown-figure.png" alt="Buggy the Clown Figure"></a>
+                    <a href="library/the-going-merry-pirate-ship.html" class="home-slideshow-link"><img src="images/the-going-merry-pirate-ship.png" alt="The Going Merry Pirate Ship"></a>
+                </div>
             </div>
         </div>
+        <script src="index-slideshow.js"></script>
     </body>
-
 </html>
