--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
                     <a href="library/london.html" class="home-slideshow-link"><img src="images/london.png" alt="London"></a>
                     <a href="library/vespa.html" class="home-slideshow-link"><img src="images/vespa.png" alt="Vespa"></a>
                     <a href="library/yellow-taxi.html" class="home-slideshow-link"><img src="images/yellow-taxi.png" alt="Yellow Taxi"></a>
-                    <a href="library/ponte-vecchio.html" class="home-slideshow-link"><img src="images/ponte-vecchio.jpg" alt="Ponte Vecchio"></a>
                     <a href="library/tranquil-garden.html" class="home-slideshow-link"><img src="images/tranquil-garden.png" alt="Tranquil Garden"></a>
                     <a href="library/daffodils.html" class="home-slideshow-link"><img src="images/daffodils.png" alt="Daffodils"></a>
                     <a href="library/lotus-flowers.html" class="home-slideshow-link"><img src="images/lotus-flowers.png" alt="Lotus Flowers"></a>
@@ -68,10 +67,10 @@
                     <a href="library/nutcracker.html" class="home-slideshow-link"><img src="images/nutcracker.png" alt="Nutcracker"></a>
                     <a href="library/christmas-decor-set.html" class="home-slideshow-link"><img src="images/christmas-decor-set.png" alt="Christmas Decor Set"></a>
                     <a href="library/santa's-workshop.html" class="home-slideshow-link"><img src="images/santa's-workshop.png" alt="Santa's Workshop"></a>
-                    <a href="library/winter-holiday-train.html" class="home-slideshow-link"><img src="images/winter-holiday-train.jpg" alt="Winter Holiday Train"></a>
+                    <a href="library/winter-holiday-train.html" class="home-slideshow-link"><img src="images/winter-holiday-train.png" alt="Winter Holiday Train"></a>
                     <a href="library/moving-truck.html" class="home-slideshow-link"><img src="images/moving-truck.png" alt="Moving Truck"></a>
                     <a href="library/decorative-easter-egg.html" class="home-slideshow-link"><img src="images/decorative-easter-egg.png" alt="Decorative Easter Egg"></a>
-                    <a href="library/easter-bunny-and-chick-egg-hunt.html" class="home-slideshow-link"><img src="images/easter-bunny-and-chick-egg-hunt.jpg" alt="Easter Bunny and Chick Egg Hunt"></a>
+                    <a href="library/easter-bunny-and-chick-egg-hunt.html" class="home-slideshow-link"><img src="images/easter-bunny-and-chick-egg-hunt.png" alt="Easter Bunny and Chick Egg Hunt"></a>
                     <a href="library/cute-bunny.html" class="home-slideshow-link"><img src="images/cute-bunny.png" alt="Cute Bunny"></a>
                     <a href="library/exotic-peacock.html" class="home-slideshow-link"><img src="images/exotic-peacock.png" alt="Exotic Peacock"></a>
                     <a href="library/sea-animals.html" class="home-slideshow-link"><img src="images/sea-animals.png" alt="Sea Animals"></a>
